# stewardme

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Caddyfile  Dockerfile  README.md  SECURITY.md  SECURITY_CHANGES.md  SETUP.md  SETUP.txt  bootstrap.ps1  config.example.yaml  deploy.sh  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: audit.yml  claude.yml  deploy.yml  e2e.yml  lint.yml  test.yml  validate-deploy.yml
content/curriculum/: skill_tree.yaml
docs/: curriculum-assessments.md  curriculum-authoring.md  curriculum-industry-capstones.md  curriculum-recommendation-pilot.md  curriculum-redesign-roadmap.md
docs/templates/: curriculum-chapter-template.mdx
eval/: __init__.py  dataset.py  grounding.py  intel.py  radar.py  response.py  retrieval.py  runner.py
eval/datasets/: grounding.yaml  radar_profiles.yaml  response.yaml  retrieval.yaml
eval/ux-audit/: run-local-audit.ps1  run-workflows.mjs
issue-drafts/: 01-watchlists.md  02-research-dossiers.md  03-advice-to-execution.md  04-proactive-delivery.md
scripts/: backup.sh  deploy-remote.sh  entrypoint.sh  launch_posts.md  persona_sim.py
specs/: README.md  catalog.yaml  manifest.yaml  ux-audit-2026-03-07.md
specs/foundations/: design-system.md  ux-guidelines.md
specs/functional/: 00-feature-map.md  INDEX.md  TEMPLATE.md  ai-capabilities.md  ai-mind-map.md  analytics-admin.md  anki-decks.md  api-versioning.md  ask-advice.md  assumption-watchlist.md  attach-to-ask-bridge.md  ci-deploy-hardening.md  company-movement-pipeline.md  configurable-brief.md  conversation-storage.md  curriculum-user-authored-guides.md  curriculum.md  daily-brief-signals.md  deep-research.md  dossier-escalation-engine.md  engagement-scoring.md  extraction-receipt.md  github-project-monitoring.md  goal-intel-matching.md  goal-tracking.md  google-brief-sync.md  google-byo-sync.md  graceful-degradation-ui.md  graceful-degradation.md  hiring-activity-pipeline.md  hybrid-retrieval.md  intelligence-feed.md  journaling.md  landing-page.md  learning-paths.md  library-reports.md  llm-council.md  local-drop-ingest.md  memory-graph-activation.md  memory-threads.md  (+21 more)
specs/technical/: 00-feature-map.md  INDEX.md  TEMPLATE.md  action-plans.md  advisor.md  ai-capabilities.md  ai-mind-map.md  anki-decks.md  api-versioning.md  architecture.md  assumption-watchlist.md  attach-to-ask-bridge.md  ci-deploy-hardening.md  cli.md  company-movement-pipeline.md  configurable-brief.md  conversation-storage.md  curriculum-user-authored-guides.md  curriculum.md  data-export.md  dossier-escalation-engine.md  engagement-scoring.md  extraction-receipt.md  github-project-monitoring.md  goal-intel-matching.md  goal-learning-merge.md  google-brief-sync.md  google-byo-sync.md  graceful-degradation-ui.md  graceful-degradation.md  greeting-cache.md  hiring-activity-pipeline.md  hybrid-retrieval.md  intelligence.md  journal.md  landing-page.md  library.md  llm.md  mcp.md  memory-graph-activation.md  (+19 more)
src/: chroma_utils.py  coach_config.py  crypto_utils.py  db.py  degradation_collector.py  frontmatter.py  graceful.py  observability.py  retry_utils.py  shared_types.py  storage_access.py  storage_paths.py  url_guard.py  user_analytics.py  user_crud.py  user_secrets.py  user_state_store.py
src/advisor/: README.md  __init__.py  action_brief.py  agentic.py  ai_capabilities_kb.py  assumptions.py  async_bridge.py  autonomous.py  context_assembler.py  context_budget.py  context_cache.py  context_compressor.py  council.py  daily_brief.py  engine.py  entity_retriever.py  events.py  goals.py  greeting.py  insights.py  learning_paths.py  migrate_learning_paths.py  nudges.py  outcomes.py  patterns.py  projects.py  prompts.py  rag.py  recommendation_storage.py  recommendations.py  return_brief.py  scoring.py  signals.py  skills.py  tools.py  untrusted.py  why_now.py
src/cli/: README.md  config.py  config_models.py  email_digest.py  logging_config.py  main.py  rate_limit.py  rate_limit_notifier.py  retry.py  utils.py
src/coach_mcp/: README.md  __init__.py  __main__.py  async_utils.py  bootstrap.py  server.py
src/curriculum/: README.md  __init__.py  anki.py  assistant_actions.py  content_schema.py  embeddings.py  flashcards.py  guide_generator.py  models.py  personalization.py  question_generator.py  scanner.py  spaced_repetition.py  store.py  user_content.py
src/embeddings/: README.md  __init__.py  openai.py  versioning.py
src/intelligence/: README.md  __init__.py  capability_model.py  company_watch.py  embeddings.py  entity_extractor.py  entity_store.py  export.py  github_repo_poller.py  github_repo_store.py  github_repos.py  goal_intel_match.py  health.py  heartbeat.py  hiring_signals.py  regulatory.py  runners.py  scheduler.py  scraper.py  scraper_factory.py  search.py  trending_radar.py  utils.py  watchlist.py
src/journal/: README.md  __init__.py  embeddings.py  export.py  extraction_receipts.py  fts.py  mind_map.py  search.py  sentiment.py  storage.py  templates.py  thread_inbox.py  thread_store.py  threads.py  titler.py  trends.py
src/llm/: README.md  __init__.py  base.py  factory.py
src/memory/: README.md  __init__.py  consolidator.py  entity_extractor.py  extractor.py  models.py  pipeline.py  resolver.py  store.py
src/notes/: __init__.py  models.py  polisher.py  (+2 more)
test-harness/: eval_criteria.md  reset.sh  run.sh  run_persona.sh  summary_report.md
tests/: README.md  conftest.py  test_architecture_boundaries.py  test_coach_config.py  test_degradation_collector.py  test_embeddings.py  test_feed_catalog.py  test_graceful.py  test_llm_factory.py  test_llm_providers.py  test_llm_tool_calling.py  test_logging_config.py  test_new_features.py  test_proactive_mentor.py  test_rate_limit.py  test_rate_limit_notifier.py  test_security.py  test_storage_access.py  test_storage_paths.py  test_url_guard.py
web/: Dockerfile  README.md  eslint.config.mjs  next.config.ts  openapi.json  package-lock.json  package.json
(+778 files in other folders)
