[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-coach"
version = "0.1.0"
description = "Personal AI advisor combining journal knowledge with external intelligence"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "chromadb>=0.4.0",
    "anthropic>=0.18.0",
    "httpx>=0.26.0",
    "beautifulsoup4>=4.12.0",
    "pyyaml>=6.0",
    "python-frontmatter>=1.0.0",
    "apscheduler>=3.10.0",
    "feedparser>=6.0.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "tenacity>=8.2.0",
    "structlog>=23.2.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
coach = "cli.main:cli"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = true
