[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stewardme"
version = "0.1.0"
description = "Open-source AI steward that monitors the world and tells you what to do next"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
authors = [{name = "Raj Contractor"}]
keywords = ["ai", "rag", "personal-assistant", "self-hosted", "llm", "journal", "intelligence"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business :: Scheduling",
]

dependencies = [
    "click>=8.1.0,<9",
    "chromadb>=0.4.0,<1",
    "anthropic>=0.18.0,<1",
    "httpx>=0.26.0,<1",
    "beautifulsoup4>=4.12.0,<5",
    "pyyaml>=6.0,<7",
    "python-frontmatter>=1.0.0,<2",
    "pypdf>=4.2.0,<5",
    "apscheduler>=3.10.0,<4",
    "feedparser>=6.0.0,<7",
    "rich>=13.0.0,<14",
    "pydantic>=2.0.0,<3",
    "tenacity>=8.2.0,<10",
    "structlog>=23.2.0,<25",
    "numpy>=1.24.0,<3",
    "mcp[cli]>=1.0.0,<2",
    "tiktoken>=0.5.0,<1",
]

[project.urls]
Homepage = "https://github.com/contractorr/stewardme"
Repository = "https://github.com/contractorr/stewardme"
Issues = "https://github.com/contractorr/stewardme/issues"

[project.optional-dependencies]
openai = ["openai>=1.0.0,<2"]
gemini = ["google-genai>=1.0.0,<2"]
all-providers = ["openai>=1.0.0,<2", "google-genai>=1.0.0,<2"]
google-trends = ["pytrends>=4.9.2,<5"]
reranking = ["sentence-transformers>=2.2.0,<4"]
web = [
    "fastapi>=0.109.0,<1",
    "uvicorn[standard]>=0.27.0,<1",
    "python-jose[cryptography]>=3.3.0,<4",
    "cryptography>=42.0.0,<45",
    "python-multipart>=0.0.6,<1",
]
dev = [
    "pre-commit>=4.0.0,<5",
    "pytest>=7.0.0,<9",
    "pytest-asyncio>=0.21.0,<1",
    "pytest-cov>=4.1.0,<7",
    "pytest-httpx>=0.30.0,<1",
    "ruff>=0.1.0,<1",
    "mypy>=1.7.0,<2",
]

[project.scripts]
coach = "cli.main:cli"
stewardme-mcp = "coach_mcp.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q -ra --strict-markers"
markers = [
    "unit: fast isolated unit tests",
    "integration: integration tests spanning multiple components",
    "web: FastAPI route and app tests",
    "slow: tests intentionally excluded from fast default CI runs",
    "serial: tests that should not be parallelized",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.coverage.run]
source = ["src"]
omit = ["*/__main__.py"]

[tool.coverage.report]
fail_under = 55

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = true
